--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ RSS: false
 github_username:    CodingWithAlice
 #facebook_username:  baiying.qiu.7
 #jianshu_username:   a8e6daf1aa23
-juejin_username:   5922402b0ce46300695c3c6a
+#juejin_username:   5922402b0ce46300695c3c6a
 #twitter_username:   qiubaiying
 
 
